# scrapper-leboncoin

./: Cargo.toml  exemple_url_params.json  saved_web_pages.txt  url_params.json
src/: ad.rs  ads.rs  app.rs  helper.rs  html_query.rs  main.rs  memoization.rs  pagined_website_explorator.rs  parser.rs  url_params.json  web_explorator.rs
src/ad/: entity.rs  repository.rs
src/database/: service.rs
src/parser/: ad_builder.rs  mod.rs  parse_date.rs  parser.rs
src/services/: data_getter.rs  mod.rs
tests/: tests.rs
