[package]
name = "scraper_leboncoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.17",  features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
regex = "1.5"
time = "0.2"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-sync"]
